--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -45,7 +45,7 @@
  - title: "Diversity and Inclusion Manifesto - It's like the Agile Manifesto, but for humans."
    subtitle: "Guest Tom Shaw discussing the Diversity and Inclusion Manifesto"
    summary: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto | https://diversitymanifesto.org | https://twitter.com/tomwillfixit | https://www.linkedin.com/in/tomwillfixit/ "
-   encoded: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto <br> https://diversitymanifesto.org <br> https://twitter.com/tomwillfixit <br> https://www.linkedin.com/in/tomwillfixit/ "
+   encoded: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto <br> <br> <a href='https://diversitymanifesto.org' target='_blank'>https://diversitymanifesto.org</a> <br> <a href='https://twitter.com/tomwillfixit' target='_blank'>https://twitter.com/tomwillfixit</a> <br> <a href='https://www.linkedin.com/in/tomwillfixit/' target='_blank'>https://www.linkedin.com/in/tomwillfixit/</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/033-Tom-Shaw.mp3
    date: Tue, 15 Jul 2019 04:20:54 GMT
    duration: "00:30:32"
@@ -56,7 +56,7 @@
  - title: "What do you know about design sprints?"
    subtitle: "Guest Rohan Perera talks with me about design sprints, and lean thinking"
    summary: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking. | https://www.linkedin.com/in/rohan-perera/ | https://leandisruptor.com/ | rohan@leandisruptor.com | https://twitter.com/Rohan_LD"
-   encoded: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking. <br> https://www.linkedin.com/in/rohan-perera/ <br> https://leandisruptor.com/ <br> rohan@leandisruptor.com <br> https://twitter.com/Rohan_LD"
+   encoded: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking.  <br> <br> <a href='https://www.linkedin.com/in/rohan-perera/' target='_blank'>https://www.linkedin.com/in/rohan-perera/</a> <br> <a href='https://leandisruptor.com/' target='_blank'>https://leandisruptor.com/</a> <br> <a href='mailto:rohan@leandisruptor.com' target='_blank'>rohan@leandisruptor.com</a> <br> <a href='https://twitter.com/Rohan_LD' target='_blank'>https://twitter.com/Rohan_LD</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/032-Rohan-Perera.mp3
    date: Tue, 09 Jul 2019 04:20:54 GMT
    duration: "01:02:33"
@@ -67,7 +67,7 @@
  - title: "How can a business coach help you succeed with Mary Carroll"
    subtitle: "Guest Mary Carroll"
    summary: "Mary and I talk about business coaching and Emotional Intelligence (EQI) | http://idetermine.ie/ | info@idetermine.ie | https://twitter.com/i_determine"
-   encoded: "Mary and I talk about business coaching and Emotional Intelligence (EQI) <br> http://idetermine.ie/ <br> info@idetermine.ie <br> https://twitter.com/i_determine"
+   encoded: "Mary and I talk about business coaching and Emotional Intelligence (EQI) <br> <a href='http://idetermine.ie/' target='_blank'>http://idetermine.ie/</a> <br> <a href='mailto:info@idetermine.ie' target='_blank'>info@idetermine.ie</a> <br> <a href='https://twitter.com/i_determine' target='_blank'>https://twitter.com/i_determine</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/031-Mary-Carroll.mp3
    date: Tue, 02 Jul 2019 04:20:54 GMT
    duration: "00:39:10"
@@ -78,7 +78,7 @@
  - title: "Guest Davy Engone"
    subtitle: "Davy is the founder and Head of Engineering at Hackages"
    summary: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy. | https://hackages.io/ | https://hackflix.dev/ | https://twitter.com/davyengone"
-   encoded: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy. <br> https://hackages.io/ <br> https://hackflix.dev/ <br> https://twitter.com/davyengone"
+   encoded: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy.  <br> <a href='https://hackages.io/' target='_blank'>https://hackages.io/</a> <br> <a href='https://hackflix.dev/' target='_blank'>https://hackflix.dev/</a> <br> <a href='https://twitter.com/davyengone' target='_blank'>https://twitter.com/davyengone</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/030-Davy-Engone.mp3
    date: Wed, 29 May 2019 04:20:54 GMT
    duration: "01:03:51"
@@ -89,7 +89,7 @@
  - title: "Guest John Doran"
    subtitle: "John is the Director Of Engineering at Phorest Salon Software, speaker, and co-organiser of Ship-It-Con 2019 in Dublin Ireland "
    summary: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" https://twitter.com/johnwildoran | https://shipitcon.com/ | https://nothingventured.rocks/ | https://www.phorest.com/careers/"
-   encoded: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" https://twitter.com/johnwildoran <br> https://shipitcon.com/ <br> https://nothingventured.rocks/ <br> https://www.phorest.com/careers/"
+   encoded: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" <br> <br><a href='https://twitter.com/johnwildoran' target='_blank'>https://twitter.com/johnwildoran</a> <br> <a href='https://shipitcon.com/' target='_blank'>https://shipitcon.com/</a> <br> <a href='https://nothingventured.rocks/' target='_blank'>https://nothingventured.rocks/</a> <br> <a href='https://www.phorest.com/careers/' target='_blank'>https://www.phorest.com/careers/</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/029-John-Doran.mp3
    date: Wed, 08 May 2019 04:20:54 GMT
    duration: "42:24"
@@ -100,7 +100,7 @@
  - title: "Guest Allen Wixted"
    subtitle: "Allen is the founder of an Augmented Reality company"
    summary: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes. https://www.linkedin.com/in/allen-wixted-6638a7b6/ | https://www.instagram.com/allenwixted/"
-   encoded: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes. https://www.linkedin.com/in/allen-wixted-6638a7b6/ <br> https://www.instagram.com/allenwixted/"
+   encoded: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes.  <br> <br> <a href='https://www.linkedin.com/in/allen-wixted-6638a7b6/' target='_blank'>https://www.linkedin.com/in/allen-wixted-6638a7b6/</a> <br> <a href='https://www.instagram.com/allenwixted/' target='_blank'>https://www.instagram.com/allenwixted/</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/028-Allen-Wixted.mp3
    date: Mon, 15 Apr 2019 04:20:54 GMT
    duration: "45:44"
@@ -110,8 +110,8 @@
 
  - title: "Guest James Wynne"
    subtitle: "James and I talk about Ops Fire drills and exercises"
-   summary: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. jawynne@gmail.com | https://www.linkedin.com/in/jawynne/detail/contact-info/ | The Dungeons and Dragons talk is https://www.youtube.com/watch?v=WmizLzszopw"
-   encoded: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. <br> jawynne@gmail.com <br> https://www.linkedin.com/in/jawynne/detail/contact-info/ <br> The Dungeons and Dragons talk is https://www.youtube.com/watch?v=WmizLzszopw"
+   summary: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. jawynne@gmail.com | https://www.linkedin.com/in/jawynne/ | The Dungeons and Dragons talk is https://www.youtube.com/watch?v=WmizLzszopw"
+   encoded: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic.  <br> <br> <a href='mailto:jawynne@gmail.com' target='_blank'>jawynne@gmail.com</a> <br> <a href='https://www.linkedin.com/in/jawynne/' target='_blank'>https://www.linkedin.com/in/jawynne/</a> <br> The Dungeons and Dragons talk is <a href='https://www.youtube.com/watch?v=WmizLzszopw' target='_blank'>https://www.youtube.com/watch?v=WmizLzszopw</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/026-James-Wynne.mp3
    date: Fri, 12 Apr 2019 04:20:54 GMT
    duration: "57:53"
