--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -122,7 +122,7 @@
  - title: "Guest Frances Smyth"
    subtitle: "I am joined by Frances Smyth, Agile Coach, ClaimVantage"
    summary: "Fran and I have a great discuss on helping a team work in a more agile fashion, and how this has worked in her experiance. https://www.linkedin.com/in/francessmyth/ | https://twitter.com/Fran_Frankly"
-   encoded: "Fran and I have a great discuss on helping a team work in a more agile fashion, and how this has worked in her experiance. https://www.linkedin.com/in/francessmyth/ <br> https://twitter.com/Fran_Frankly"
+   encoded: "Fran and I have a great discuss on helping a team work in a more agile fashion, and how this has worked in her experiance.  <br> <br><a href='https://www.linkedin.com/in/francessmyth/' target='_blank'>https://www.linkedin.com/in/francessmyth/</a> <br> <a href='https://twitter.com/Fran_Frankly' target='_blank'>https://twitter.com/Fran_Frankly</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/027-Frances-Smyth.mp3
    date: Tue, 09 Apr 2019 04:20:54 GMT
    duration: "01:03:47"
