--- a/_config.yml
+++ b/_config.yml
@@ -23,21 +23,109 @@ twitter_username: dave_albert
 github_username:  davealbert
 instagram_base: https://api.instagram.com/oembed/?url=http://instagr.am/p/
 instagram_items:
-    - BtAvDPKATNk
-    - Bsm_JW1ATZQ
-    - BsiCqVZD5-h
-    - BsfQvfBg5UY
-    - Bscr9IMg3qk
-    - BsaHI4Rjrfn
-    - BsYmpbMh0sL
-    - BrIDJu4AvR_
-    - BqOvg1tgguy
-    - BoRZpaMgK5S
-    - BiHpQs7AjV7
-    - BQdBmfnhMy-
-    - BNM6RTrjsWU
-    - BDOZlQerxki
-    - BCcgSWKrxki
+    - B00SUBIAPzJ
+    - B0nSbowgDgq
+    - B0iI1DOgPzG
+    - B0fkEBEgNZo
+    - B0Rc5n3l-0i
+    - B0QHRmMAgMz
+    - B0AqhXVg9jO
+    - Bz-FvHxAQYs
+    - BzupB3ag5jG
+    - BzsFmkBArXB
+    - BzaJitjA75o
+    - BzXdx4aARXS
+    - BzKl16HgIEe
+    - By7JEJyAz2_
+    - By4kO6GAHz1
+    - By1_eWSjbff
+    - BypHg96Ahfm
+    - Byo11-Qi4Yp
+    - ByjsQAFC3YY
+    - ByhZFHDgEqU
+    - ByXF_h1hBi6
+    - ByR8U5xAycq
+    - ByPXmiKguRD
+    - ByHpNaPFNK4
+    - ByFEYcljXro
+    - ByCfjW7jeQB
+    - Bx_6z15FQk_
+    - Bx9V9UVAWba
+    - Bx1nmWCglo3
+    - BxzCxSElbuI
+    - BxweCJSHzR8
+    - Bxt5Lp4jq37
+    - BxrUdOMhGuw
+    - BxjmDScgRnr
+    - BxhBQ_rlADY
+    - Bxb3oV7DsI6
+    - BxO_pUqjkvk
+    - BxJ2ILzFuYI
+    - BxHE-T0lWuH
+    - Bw8xHExgy6m
+#    - BtAvDPKATNk
+#    - Bsm_JW1ATZQ
+#    - BsiCqVZD5-h
+#    - BsfQvfBg5UY
+#    - Bscr9IMg3qk
+#    - BsaHI4Rjrfn
+#    - BsYmpbMh0sL
+#    - BrIDJu4AvR_
+#    - BqOvg1tgguy
+#    - BoRZpaMgK5S
+#    - Bn_djM1gFyT
+#    - Bno06RUgi-R
+#    - Bnb7eCjA9O-
+#    - BltAjbQgoOT
+#    - BjT8xc_gWz8
+#    - BiHpQs7AjV7
+#    - BiCjr_5gr9l
+#    - BiCe5zKAi8A
+#    - BiBw_OTgALt
+#    - BiBr5VwANAz
+#    - Bh1CivmAhNy
+#    - Bhy2R_oAOpz
+#    - BgF6x1fBvm_
+#    - BfAzLgfn894
+#    - BdX2BLTnxYT
+#    - BcrZ0lFnHSK
+#    - BcqCtolnLkb
+#    - Bcp2EVpnojJ
+#    - BcpN-pQHzPk
+#    - BcnUwMkHISd
+#    - BcnSGnkn3Zd
+#    - BcnOknbHWON
+#    - BcnLJDyHxrV
+#    - BcnGvwuHVCk
+#    - Bcj2ayeHIiS
+#    - BchEpNGH7-3
+#    - BceXvmAHhSR
+#    - Bcbw18pnR5r
+#    - BcaTdDAnUbY
+#    - BcZ6i-NnNWu
+#    - BcZTAGCnOtG
+#    - BcY5Vwrns9V
+#    - BcX8MetHinw
+#    - BcSJuf-nUh3
+#    - BcKCurEnbhb
+#    - BcHlvOaHhMn
+#    - BcEjoS0HAw3
+#    - BcEWmSfHe8J
+#    - BcC1Bp1HYGb
+#    - BcCO5SUnUHd
+#    - Bb_yxrfnahs
+#    - Bb_qG0inISm
+#    - Bb_WHQXHeQM
+#    - Bb9tvlEnzJI
+#    - Bb9ZU9Fn1oJ
+#    - Bb6-Kmqn7lQ
+#    - Bb2aNp_HegU
+#    - BbxWcHbHvt2
+#    - BbxSVJVn8cF
+#    - BbxM0mAn9tA
+#    - BbxJ9NPHf5_
+#    - BbxG0LLnqcD
+#    - BbwyhqcH-5q
 
 # Build settings
 markdown: kramdown
