bold transcripts and 404

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -7,7 +7,7 @@
    #duration: "00:39:55"
    #length: 19161774
    #transcript: "041"
-   #image: /images/guests/
+   #image: /images/guests/Devon-Campbell.png
 
  #- title: ""
    #subtitle: ""
