--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -9,6 +9,18 @@
    #transcript: "041"
    #image: /images/guests/Devon-Campbell.png
 
+ - title: "JSDayIE: Irelands first single day JavaScript conferance"
+   subtitle: "Remo H Jansen to organiser of JSDayIE"
+   summary: " Guest: Remo H Jansen organiser of JSDayIe joins us to discuss open-source contribution, writing a technical book, starting a meetup, and ultimately starting a conference.  | Buy your ticket using this discount code:  https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA | https://www.linkedin.com/in/remojansen/ | https://www.jsday.org/ | https://twitter.com/JSDayIE | https://twitter.com/RemoHJansen "
+   encoded: "Guest: Remo H Jansen organiser of JSDayIe joins us to discuss open-source contribution, writing a technical book, starting a meetup, and ultimately starting a conference.  <br> <br> Buy your ticket using this discount code:<br>  <a href='https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA'>https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA</a> <br> <br> <a href='https://www.linkedin.com/in/remojansen/'>https://www.linkedin.com/in/remojansen/</a> <br> <a href='https://www.jsday.org/'>https://www.jsday.org/</a> <br> <a href='https://twitter.com/JSDayIE'>https://twitter.com/JSDayIE</a> <br> <a href='https://twitter.com/RemoHJansen'>https://twitter.com/RemoHJansen</a> "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/042-remo-jansen.mp3
+   date: Thu, 28 Sep 2019 04:20:54 GMT
+   duration: "00:39:55"
+   length: 18632429
+   transcript: "042"
+   image: /images/guests/Remo-Jansen.jpg
+
+
  - title: "How can you make a video go viral ... maybe redefine viral"
    subtitle: "Co-founders of Viral Ideas and Flixation: David Feinman and Zach Medina"
    summary: "Guests David Feinman and Zach Medina co-founders of Viral Ideas and Flixation join me to talk about starting two companies in the Video marketing space. David and Zach have been on their entrepreneurial journey from an early age, and they were good friends before starting the two businesses the currently operate.  | https://flixation.co/ | https://www.viralideasmarketing.com | https://www.linkedin.com/in/david-feinman-7a069255/ | https://www.linkedin.com/in/zach-medina-6b79075a/"
