--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -9,7 +9,7 @@
    #transcript: "041"
    #image: /images/guests/Devon-Campbell.png
 
- - title: "JSDayIE: Irelands first single day JavaScript conferance"
+ - title: "JSDayIE: Irelands first single day JavaScript conference"
    subtitle: "Remo H Jansen the organiser of JSDayIE"
    summary: " Guest: Remo H Jansen organiser of JSDayIe joins us to discuss open-source contribution, writing a technical book, starting a meetup, and ultimately starting a conference.  | Buy your ticket using this discount code:  https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA | https://www.linkedin.com/in/remojansen/ | https://www.jsday.org/ | https://twitter.com/JSDayIE | https://twitter.com/RemoHJansen "
    encoded: "Guest: Remo H Jansen organiser of JSDayIe joins us to discuss open-source contribution, writing a technical book, starting a meetup, and ultimately starting a conference.  <br> <br> Buy your ticket using this discount code:<br>  <a href='https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA'>https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA</a> <br> <br> <a href='https://www.linkedin.com/in/remojansen/'>https://www.linkedin.com/in/remojansen/</a> <br> <a href='https://www.jsday.org/'>https://www.jsday.org/</a> <br> <a href='https://twitter.com/JSDayIE'>https://twitter.com/JSDayIE</a> <br> <a href='https://twitter.com/RemoHJansen'>https://twitter.com/RemoHJansen</a> "
