--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -9,6 +9,17 @@
    #transcript: "041"
    #image: /images/guests/Devon-Campbell.png
 
+ - title: "Interested in shifting into a career as a Web Developer/freelancer? Raddevon is a resource for you."
+   subtitle: "Devon Campbell created Raddevon and is a Web Developer"
+   summary: "Guest Devon Campbell talks to us about switching career to be a freelance Web Developer, and creating a resource for others to do the same.  He also gives free mentoring sessions to help people with the preperation and transition.  | https://raddevon.com | https://twitter.com/raddevon | https://www.linkedin.com/in/raddevon/"
+   encoded: "Guest Devon Campbell talks to us about switching career to be a freelance Web Developer, and creating a resource for others to do the same.  He also gives free mentoring sessions to help people with the preperation and transition.  <br> <br> <a href='https://raddevon.com'>https://raddevon.com</a> <br> <a href='https://twitter.com/raddevon'>https://twitter.com/raddevon</a> <br> <a href='https://www.linkedin.com/in/raddevon/'>https://www.linkedin.com/in/raddevon/</a> "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/041-Devon-Campbell.mp3
+   date: Tue, 03 Sep 2019 04:20:54 GMT
+   duration: "00:50:48"
+   length: 40342578
+   transcript: "041"
+   image: /images/guests/Devon-Campbell.png
+
  - title: "JSDayIE: Irelands first single day JavaScript conferance"
    subtitle: "Remo H Jansen to organiser of JSDayIE"
    summary: " Guest: Remo H Jansen organiser of JSDayIe joins us to discuss open-source contribution, writing a technical book, starting a meetup, and ultimately starting a conference.  | Buy your ticket using this discount code:  https://ti.to/wolk-software-limited/jsdayie-2019/discount/CTODA | https://www.linkedin.com/in/remojansen/ | https://www.jsday.org/ | https://twitter.com/JSDayIE | https://twitter.com/RemoHJansen "
