starting 043-Chris-Hardie

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -8,6 +8,17 @@
    #length: 19161774
    #transcript: "041"
    #image: /images/guests/Devon-Campbell.png
+   #
+ #- title: ""
+   #subtitle: ""
+   #summary: ""
+   #encoded: ""
+   #mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/043-Chris-Hardie.mp3
+   #date: Tue, 10 Sep 2019 04:20:54 GMT
+   #duration: "00:55:59"
+   #length: 42412392
+   #transcript: "041"
+   #image: /images/guests/Chris-Hardie.jpg
 
  - title: "Interested in shifting into a career as a Web Developer/freelancer? Raddevon is a resource for you."
    subtitle: "Devon Campbell created Raddevon and is a Web Developer"
