--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -9,6 +9,17 @@
    #transcript: "041"
    #image: /images/guests/Devon-Campbell.png
    #
+ - title: "Lean about life lessons, hack, experience through the University of Life"
+   subtitle: "Guest Jamie White an entrepreneur and founder sharing some of his experiences"
+   summary: " Jamie White an entrepreneur who founded Leading Social and The University of Life.  The University of life: 'We believe that there's no greater wealth acquired than all that you learn in life through the likes of good & bad experiences, challenges, dedicated study and life long pursuit. The University of Life is centred around the sharing of these life lessons, experiences, strategies for success, hacks and wisdom. We want to share these with you.' Also hear the story of how Jamie and his team brought Gary Vee over to Dublin for an event.  | https://theuniversityoflife.com/ | https://www.linkedin.com/in/jamiewhiteee/ | https://www.instagram.com/jamiewhite/ | https://www.linkedin.com/company/theuniversityoflife/ "
+   encoded: "Jamie White an entrepreneur who founded Leading Social and The University of Life.  The University of life: 'We believe that there's no greater wealth acquired than all that you learn in life through the likes of good & bad experiences, challenges, dedicated study and life long pursuit. The University of Life is centred around the sharing of these life lessons, experiences, strategies for success, hacks and wisdom. We want to share these with you.' Also hear the story of how Jamie and his team brought Gary Vee over to Dublin for an event.  <br> <br> <a href='https://theuniversityoflife.com/' target='_blank'>https://theuniversityoflife.com/</a> <br> <a href='https://www.linkedin.com/in/jamiewhiteee/' target='_blank'>https://www.linkedin.com/in/jamiewhiteee/</a> <br> <a href='https://www.instagram.com/jamiewhite/' target='_blank'>https://www.instagram.com/jamiewhite/</a> <br> <a href='https://www.linkedin.com/company/theuniversityoflife/' target='_blank'>https://www.linkedin.com/company/theuniversityoflife/</a> "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/044-Jamie-White.mp3
+   date: Tue, 17 Sep 2019 04:20:54 GMT
+   duration: "01:00:37"
+   length: 29099172
+   transcript: "044"
+   image: /images/guests/Jamie-White.png
+
  - title: "Chris Hardie a Senior Software Engineer at Automattic (wordpress.com)"
    subtitle: "From entrepreneur to engineer at Automattic"
    summary: "Guest Chris Hardie tells us about his very interesting journey he was an entrepreneur for over 16 years, is now working on Special Projects at Automattic makers of wordpress.com. Hear about what it was like starting his company, many of the things he learned along the way and his transition to working for a great company.  | https://twitter.com/ChrisHardie | https://chrishardie.com/ | https://www.linkedin.com/in/chrishardie/ "
