--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -9,6 +9,29 @@
    #transcript: "041"
    #image: /images/guests/Devon-Campbell.png
    #
+ #- title: ""
+   #subtitle: ""
+   #summary: ""
+   #encoded: ""
+   #mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/041-devon-campbell.mp3
+   #date: Tue, 03 Sep 2019 04:20:54 GMT
+   #duration: "00:39:55"
+   #length: 19161774
+   #transcript: "041"
+   #image: /images/guests/Devon-Campbell.png
+   #
+
+ - title: "War stories from Victory CTO's founder John Cunningham"
+   subtitle: "They help you do what ever you need to do to get to the next level!"
+   summary: " Guest John Cunningham co-founder of 'Victory CTO' tells use some amazing war stories from his time helping clients with surprising challenges. He also shares parts of his journey starting companies.  Victory is the world's leading Hypernetic Solutions consultancy, delivering business evolution through technology, data-driven process, and cross-disciplinary experience to create transformative business solutions.  | http://victorycto.com | jwc@victorycto.com | https://www.linkedin.com/in/jwcunningham/ | https://twitter.com/VictoryCto "
+   encoded: " Guest John Cunningham co-founder of 'Victory CTO' tells use some amazing war stories from his time helping clients with surprising challenges. He also shares parts of his journey starting companies.  Victory is the world's leading Hypernetic Solutions consultancy, delivering business evolution through technology, data-driven process, and cross-disciplinary experience to create transformative business solutions.  <br> <br> <a href='http://victorycto.com' target='_blank'>http://victorycto.com</a> <br> <a href='mailto:jwc@victorycto.com' target='_blank'>jwc@victorycto.com</a> <br> <a href='https://www.linkedin.com/in/jwcunningham/' target='_blank'>https://www.linkedin.com/in/jwcunningham/</a> <br> <a href='https://twitter.com/VictoryCto' target='_blank'>https://twitter.com/VictoryCto</a> "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/045-John-Cunningham.mp3
+   date: Tue, 24 Sep 2019 04:20:54 GMT
+   duration: "01:05:42"
+   length: 31543606
+   transcript: "045"
+   image: /images/guests/John-Cunningham.png
+
  - title: "Lean about life lessons, hack, experience through the University of Life"
    subtitle: "Guest Jamie White an entrepreneur and founder sharing some of his experiences"
    summary: " Jamie White an entrepreneur who founded Leading Social and The University of Life.  The University of life: 'We believe that there's no greater wealth acquired than all that you learn in life through the likes of good & bad experiences, challenges, dedicated study and life long pursuit. The University of Life is centred around the sharing of these life lessons, experiences, strategies for success, hacks and wisdom. We want to share these with you.' Also hear the story of how Jamie and his team brought Gary Vee over to Dublin for an event.  | https://theuniversityoflife.com/ | https://www.linkedin.com/in/jamiewhiteee/ | https://www.instagram.com/jamiewhite/ | https://www.linkedin.com/company/theuniversityoflife/ "
